endpoint/k8s/stable/endpoint.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: endpoint-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Set-Cookie "Canary=always; Path=/";
spec:
  rules:
  - host: app.microfrontend
    http:
      paths:
        - path: /endpoint/?(.*)
          backend:
            serviceName: endpoint-svc
            servicePort: 2222
